--- a/New_Yerker/New_Yerker/New_Yerker.csproj
+++ b/New_Yerker/New_Yerker/New_Yerker.csproj
@@ -11,6 +11,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="View\Source\f4c00eb3c5a97809a621db55fe1c459a.png" />
+    <None Remove="View\Source\logo.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
   </ItemGroup>
@@ -20,7 +26,11 @@
     <Folder Include="Model\LoadModel\" />
     <Folder Include="Model\ParsModel\" />
     <Folder Include="ViewModel\" />
-    <Folder Include="View\Source\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="View\Source\f4c00eb3c5a97809a621db55fe1c459a.png" />
+    <Resource Include="View\Source\logo.png" />
   </ItemGroup>
 
   <ItemGroup>
